--- a/docker-laravel/src/public/mix-manifest.json
+++ b/docker-laravel/src/public/mix-manifest.json
@@ -1,3 +1,5 @@
 {
-    "/js/app.js": "/js/app.js"
+    "/js/app.js": "/js/app.js?id=d89a887837ce30c267bd",
+    "/css/cropper.min.css": "/css/cropper.min.css?id=c33e5fcf49439f7a02cf",
+    "/js/cropper.min.js": "/js/cropper.min.js?id=c5ae57bcca3ac4ebde1f"
 }
