--- a/docker-laravel/docker-compose.yml
+++ b/docker-laravel/docker-compose.yml
@@ -27,7 +27,6 @@ services:
       - SESSION_DRIVER=redis
       - QUEUE_DRIVER=redis
       - REDIS_HOST=redis
-
   web:
     image: nginx:1.17-alpine
     depends_on:
@@ -40,41 +39,12 @@ services:
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
     environment:
       - TZ=${TZ:-Asia/Tokyo}
-
   db:
     image: mysql:8.0
     volumes:
-      # - db-store:/var/lib/mysql
+      - db-store:/var/lib/mysql
       - ./logs:/var/log/mysql
       - ./docker/mysql/my.cnf:/etc/mysql/conf.d/my.cnf
-    environment:
-      - MYSQL_DATABASE=${DB_NAME}
-      - MYSQL_USER=${DB_USER}
-      - MYSQL_PASSWORD=${DB_PASS}
-      - MYSQL_ROOT_PASSWORD=${DB_PASS}
-      - TZ=${TZ:-Asia/Tokyo}
-    ports:
-      - "3306:3306"
-
-  phpmyadmin:
-    image: phpmyadmin/phpmyadmin
-    environment:
-      - PMA_ARBITRARY=1
-      - PMA_HOST=db
-      - PMA_USER=root
-      - PMA_PASSWORD=root
-    ports:
-      - "8080:80"
-    volumes:
-      - ./phpmyadmin-session:/sessions
-
-  db-testing:
-    image: mysql:8.0
-    volumes:
-      - ./docker/mysql/my.cnf:/etc/mysql/conf.d/my.cnf
-    tmpfs:
-      - /var/lib/mysql
-      - /var/log/mysql
     environment:
       - MYSQL_DATABASE=${DB_NAME:-homestead}
       - MYSQL_USER=${DB_USER:-homestead}
@@ -82,16 +52,36 @@ services:
       - MYSQL_ROOT_PASSWORD=${DB_PASS:-secret}
       - TZ=${TZ:-Asia/Tokyo}
     ports:
-      - ${DB_TESTING_PORT:-13307}:3306
-
+      - ${DB_PORT:-13306}:3306
+  # db-testing:
+  #   image: mysql:8.0
+  #   volumes:
+  #     - ./docker/mysql/my.cnf:/etc/mysql/conf.d/my.cnf
+  #   tmpfs:
+  #     - /var/lib/mysql
+  #     - /var/log/mysql
+  #   environment:
+  #     - MYSQL_DATABASE=${DB_NAME:-homestead}
+  #     - MYSQL_USER=${DB_USER:-homestead}
+  #     - MYSQL_PASSWORD=${DB_PASS:-secret}
+  #     - MYSQL_ROOT_PASSWORD=${DB_PASS:-secret}
+  #     - TZ=${TZ:-Asia/Tokyo}
+  #   ports:
+  #     - ${DB_TESTING_PORT:-13307}:3306
   node:
     image: node:12.14-alpine
     tty: true
     volumes:
       - ${PROJECT_PATH:-./src}:/work
     working_dir: /work
-
+  redis:
+    image: redis:5.0-alpine
+    volumes:
+      - redis-store:/data
   mail:
     image: mailhog/mailhog
     ports:
       - ${MAILHOG_PORT:-18025}:8025
+volumes:
+  db-store:
+  redis-store:
