--- a/docker-laravel/src/composer.json
+++ b/docker-laravel/src/composer.json
@@ -11,12 +11,14 @@
         "php": "^7.1.3",
         "barryvdh/laravel-debugbar": "^3.2",
         "fideloper/proxy": "^4.0",
+        "intervention/image": "^2.5",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "laravel/ui": "^1.2",
         "predis/predis": "^1.1",
         "symfony/translation": "4.3.8",
-        "unisharp/laravel-ckeditor": "^4.7"
+        "unisharp/laravel-ckeditor": "^4.7",
+        "unisharp/laravel-filemanager": "^1.7"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
