--- a/docker-laravel/docker/php/Dockerfile
+++ b/docker-laravel/docker/php/Dockerfile
@@ -39,3 +39,11 @@ RUN apk update && \
   composer config -g process-timeout 3600 && \
   composer config -g repos.packagist composer https://packagist.jp && \
   composer global require hirak/prestissimo
+
+  # install GD & exif
+RUN apt-get update && apt-get install -y \
+        libfreetype6-dev \
+        libjpeg62-turbo-dev \
+        libpng-dev \
+    && docker-php-ext-configure gd --with-freetype --with-jpeg \
+    && docker-php-ext-install -j$(nproc) gd
