--- a/docker-laravel/src/composer.json
+++ b/docker-laravel/src/composer.json
@@ -9,6 +9,8 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "ext-gd": "*",
+        "ext-exif":"*",
         "barryvdh/laravel-debugbar": "^3.2",
         "fideloper/proxy": "^4.0",
         "intervention/image": "^2.5",
@@ -18,7 +20,7 @@
         "predis/predis": "^1.1",
         "symfony/translation": "4.3.8",
         "unisharp/laravel-ckeditor": "^4.7",
-        "unisharp/laravel-filemanager": "^1.7"
+        "unisharp/laravel-filemanager": "^2.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
